--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2,7 +2,7 @@
 
 
 <head>
-  
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -348,7 +348,10 @@
           <h3>Font family&#58; Lato</h3>
         </div>
         <div class="element">
-          <h3>Font size &#38; Weight &#38; Color</h3>
+          <h3>Font size &#38; Weight</h3>
+          <div class="blankHXS"></div>
+
+          <h4>Display</h4>
 
           <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
           <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
@@ -382,7 +385,7 @@
           <h3 class="allCaps">Uppercase, Lorem ipsum dolor sit amet</h3>
           <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
           <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
-          <div class="t-hello">hello, I'm Vicky. </div>
+          <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
 
 
           <h3 class="textUnderline colorGrey">text decoration</h3>
@@ -812,70 +815,137 @@
         </div>
       </div>
     </div>
+  </div>
 
 
 
-    <div class="blankHM"></div>
-    <!-- icon, button -->
-    <div class="wrapper">
-      <div class="element">
-        <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-      </div>
-      <div class="element">
-        <h3>Icons</h3>
-      </div>
-      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <img class="intro-logo" src="../icon/in.svg" alt="linkedin"></a>
-            <a> <img class="intro-logo" src="../icon/ins.svg" alt="linkedin"></a>
-            <a> <img class="intro-logo" src="../icon/git.svg" alt="linkedin"></a>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <img class="footer-logo" src="../icon/in.svg" alt="linkedin"></a>
-            <a> <img class="footer-logo" src="../icon/ins.svg" alt="linkedin"></a>
-            <a> <img class="footer-logo" src="../icon/git.svg" alt="linkedin"></a>
-          </div>
+  <div class="blankHM"></div>
+  <!-- icon, button -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="element">
+      <h3>Icons</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <img class="intro-logo" src="../icon/in.svg" alt="linkedin"></a>
+          <a> <img class="intro-logo" src="../icon/ins.svg" alt="linkedin"></a>
+          <a> <img class="intro-logo" src="../icon/git.svg" alt="linkedin"></a>
         </div>
       </div>
-      <div class="element">
-        <h3>Buttons</h3>
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <img class="footer-logo" src="../icon/in.svg" alt="linkedin"></a>
+          <a> <img class="footer-logo" src="../icon/ins.svg" alt="linkedin"></a>
+          <a> <img class="footer-logo" src="../icon/git.svg" alt="linkedin"></a>
+        </div>
       </div>
-      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <button class="buttonLanding">Button
-                &nbsp; </button></a>
-          </div>
+    </div>
+    <div class="element">
+      <h3>Buttons</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <button class="buttonLanding">Button
+              &nbsp; </button></a>
         </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <button class="button-35 DS">Button</button></a>
-          </div>
-        </div>
-
-
       </div>
-      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <button class="buttonLanding arrButton">Button</a>
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <button class="button-35 DS">Button</button></a>
+        </div>
+      </div>
+
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <button class="buttonLanding arrButton">Button</a>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <a> <button class="button-35 DS arrButtonSmall">Button</button></a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="blankHM"></div>
+
+  <!-- icon, button -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Accordion <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+
+          <h4 class="accordion noMargin"><strong>Title 1 </strong>
+
+          </h4>
+          <div class="accordion-content">
+            <h4 class=""><strong>Subtitle</strong> </h4>
+            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat.</h4>
+            <ul class="">
+              <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. </li>
+              <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</li>
+            </ul>
+            <div class="blankHXS"></div>
+          </div>
+          <h4 class="accordion noMargin"><strong>Title 2 </strong></h4>
+          <div class="accordion-content">
+            <h4 class=""><strong>Subtitle</strong> </h4>
+            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat.</h4>
+            <ul class="">
+              <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. </li>
+              <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</li>
+            </ul>
+            <div class="blankHXS"></div>
+          </div>
+          <h4 class="accordion noMargin"><strong>Title 3 </strong></h4>
+          <div class="accordion-content">
+            <h4 class=""><strong>Subtitle</strong> </h4>
+            <h4 class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat.</h4>
+            <ul class="">
+              <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. </li>
+              <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</li>
+            </ul>
+            <div class="blankHXS"></div>
           </div>
         </div>
-
-        <div class="Grid-cell">
-          <div class="element">
-            <a> <button class="button-35 DS arrButtonSmall">Button</button></a>
-          </div>
-        </div>
-
       </div>
     </div>
 
+
+
+
   </div>
-  <!-- icon, button -->
+
+
+
+
   <div class="blankHM"></div>
   <!-- note-->
   <div class="wrapper">
@@ -1059,7 +1129,6 @@
     </div>
   </div>
   <div class="blankHL"></div>
-  </div>
 
 
 
