--- a/photography/index.html
+++ b/photography/index.html
@@ -132,7 +132,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-        <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -187,23 +187,104 @@
   <!--intro-->
   <div class="blankHXS"></div>
 
-  <!-- Selected photos -->
   <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+    <div class="element">
+      <p class="tArrow">Selected Photos<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+
+  </div>
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Selected Photos</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          <div class="ShadowBox">
+            <img src="./Squirrel01.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Wildlife</h5>
+              <h3>Pacific Grove Rocky View, Monterey, CA </h3>
+              <p class="lineHorizAll"></p>
+              <h6>September, 2020</h6>
+              <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Selected photos -->
-  <div class="blankHM"></div>
+  <div class="blankHS"></div>
 
-  <!--photos-->
+
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class=" ShadowBox">
+            <img src="./Squirrel02.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Wildlife</h5>
+              <h3>Pacific Grove Rocky View, Monterey, CA </h3>
+              <p class="lineHorizAll"></p>
+              <h6> February, 2023</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ShadowBox">
+            <img src="./Squirrel03.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Wildlife</h5>
+              <h3>Pacific Grove Rocky View, Monterey, CA </h3>
+              <p class="lineHorizAll"></p>
+              <h6> February, 2023</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHS"></div>
+
+
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class=" ShadowBox">
+            <img src="./Butterfly01.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Wildlife</h5>
+              <h3>Monarch Butterfly Sanctuary</h3>
+              <p class="lineHorizAll"></p>
+              <h6> February, 2023</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ShadowBox">
+            <img src="./Butterfly02.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Wildlife</h5>
+              <h3>Monarch Butterfly Sanctuary</h3>
+              <p class="lineHorizAll"></p>
+              <h6> February, 2023</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -234,18 +315,14 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
-  <!--photos-->
+
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
 
 
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
@@ -267,12 +344,10 @@
       </div>
     </div>
   </div>
-  <!--photos-->
 
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -305,11 +380,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
@@ -328,7 +401,6 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
@@ -350,11 +422,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -387,11 +457,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -424,11 +492,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -461,12 +527,10 @@
       </div>
     </div>
   </div>
-  <!--photos-->
 
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
@@ -485,11 +549,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -522,11 +584,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--full">
       <div class="Grid-cell">
@@ -545,11 +605,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
@@ -568,11 +626,9 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--photos-->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of2 Grid--center">
       <div class="Grid-cell">
@@ -591,7 +647,6 @@
       </div>
     </div>
   </div>
-  <!--photos-->
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
