--- a/design_system/index.html
+++ b/design_system/index.html
@@ -204,197 +204,50 @@
       </div>
     </div>
   </div>
-
-
-
   <div class="blankHM"></div>
 
-  <!-- Color -->
   <div class="wrapper">
     <div class="element">
-      <p class="tArrow">Color<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="blankHXS"></div>
-
-    <div class="element">
-      <h3>Brand Expression</h3>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS black shadowBox">HEX 161616</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS blackLess shadowBox">HEX 5f6368</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyDarkest shadowBox">HEX 999D9F</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyDark shadowBox">HEX c8c8c8</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyNormal shadowBox">HEX e4e4e4</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyLight shadowBox">HEX efefef</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyLightest shadowBox">HEX f8f8f8</div>
-        </div>
-      </div>
-    </div>
-    <div class="blankHS"></div>
-    <div class="element">
-      <h3>Action</h3>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorLter shadowBox">HEX cbeded</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorLtest shadowBox">HEX faffff</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorWarm shadowBox">HEX fcf5eb</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorAlet shadowBox">HEX 161616</div>
-        </div>
-      </div>
-
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Color -->
-  <div class="blankHM"></div>
-
-  <!-- Elevation -->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Elevation <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      <p class="tArrow">Devices<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
     <div class="blankHXS"></div>
 
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowFilter">Small Shadow</div>
+
+          <img class="iconML" src="./Icon_Mobile.svg" alt="Mobile">
+          <div class="centerHorz">
+            <div class="chip">Mobile</div>
+          </div>
+        </div>
+
+
+
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="iconML" src="./Icon_Tablet.svg" alt="Tablet">
+          <div class="centerHorz">
+            <div class="chip">Tablet</div>
+          </div>
+
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightest shadowBox">Normal Shadow</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyLightest shadowFilterL">Larger Shadow</div>
+          <img class="iconML" src="./Icon_Laptop.svg" alt="Laptop">
+          <div class="centerHorz">
+            <div class="chip">Laptop</div>
+          </div>
+
         </div>
       </div>
     </div>
-
-    <div class="blankHS"></div>
-
 
   </div>
-  <!-- Elevation -->
-  <div class="blankHM"></div>
-  <!-- Font -->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Font <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="blankHXS"></div>
-
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
-          <h3>Font family&#58; Lato</h3>
-        </div>
-        <div class="element">
-          <h3>Font size &#38; Weight</h3>
-          <div class="blankHXS"></div>
-
-          <h4>Display</h4>
-
-          <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
-          <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
-          <div class="blankHXS"></div>
-
-          <h4>Heading</h4>
-          <h1>h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
-
-          <h2>h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h2>
-
-          <h3>h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h3>
-
-          <h4>h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h4>
-
-          <h5>h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h5>
-
-          <h6>h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h6>
-
-          <div class="blankHXS"></div>
-          <h4>Body</h4>
-
-          <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
-          <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
-          <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
-
-          <div class="blankHXS"></div>
-          <h4>Others</h4>
-          <strong>
-            <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
-          </strong>
-          <h3 class="allCaps">Uppercase, Lorem ipsum dolor sit amet</h3>
-          <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
-          <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
-          <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
 
 
-          <h3 class="textUnderline colorGrey">text decoration</h3>
-          <h3 class="textDecor">text decoration</h3>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Font -->
   <div class="blankHM"></div>
   <!-- break points -->
   <div class="wrapper">
@@ -470,6 +323,7 @@
 
   </div>
   <!-- break points -->
+  <div class="blankHM"></div>
   <div class="blankHM"></div>
   <!-- Grid -->
   <div class="wrapper">
@@ -816,7 +670,196 @@
       </div>
     </div>
   </div>
+  <div class="blankHM"></div>
 
+  <!-- Color -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Color<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="blankHXS"></div>
+
+    <div class="element">
+      <h3>Brand Expression</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS black shadowBox">HEX 161616</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS blackLess shadowBox">HEX 5f6368</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyDarkest shadowBox">HEX 999D9F</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyDark shadowBox">HEX c8c8c8</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyNormal shadowBox">HEX e4e4e4</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLight shadowBox">HEX efefef</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightest shadowBox">HEX f8f8f8</div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <div class="element">
+      <h3>Action</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLter shadowBox">HEX cbeded</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorLtest shadowBox">HEX faffff</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorWarm shadowBox">HEX fcf5eb</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorAlet shadowBox">HEX 161616</div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Color -->
+  <div class="blankHM"></div>
+
+  <!-- Elevation -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Elevation <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="blankHXS"></div>
+
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightest shadowFilter">Small Shadow</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightest shadowBox">Normal Shadow</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightest shadowFilterL">Larger Shadow</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="blankHS"></div>
+
+
+  </div>
+  <!-- Elevation -->
+  <div class="blankHM"></div>
+  <!-- Font -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Font <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="blankHXS"></div>
+
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h3>Font family&#58; Lato</h3>
+        </div>
+        <div class="element">
+          <h3>Font size &#38; Weight</h3>
+          <div class="blankHXS"></div>
+
+          <div class="chip">Display</div>
+          <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
+          <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
+          <div class="blankHXS"></div>
+
+          <div class="chip">Heading</div>
+
+          <h1>h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
+
+          <h2>h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h2>
+
+          <h3>h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h3>
+
+          <h4>h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h4>
+
+          <h5>h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h5>
+
+          <h6>h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h6>
+
+          <div class="blankHXS"></div>
+          <div class="chip">Body</div>
+
+
+          <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
+          <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
+          <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
+
+          <div class="blankHXS"></div>
+          <div class="chip">Others</div>
+
+          <strong>
+            <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
+          </strong>
+          <h3 class="allCaps">Uppercase, Lorem ipsum dolor sit amet</h3>
+          <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
+          <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
+          <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
+
+
+          <h3 class="textUnderline colorGrey">text decoration</h3>
+          <h3 class="textDecor">text decoration</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Font -->
 
 
   <div class="blankHM"></div>
@@ -954,7 +997,7 @@
     </div>
     <div class="blankHXS"></div>
     <div class="element">
-      <h3>Type 1</h3>
+      <div class="chip">Type1</div>
     </div>
 
     <div class="Grid Grid--full wrapper">
@@ -986,7 +1029,7 @@
     <div class="blankHS"></div>
 
     <div class="element">
-      <h3>Type 2</h3>
+      <div class="chip">Type2</div>
     </div>
     <div class="Grid-cell">
       <div class="element">
@@ -1010,7 +1053,7 @@
     <div class="blankHXS"></div>
 
     <div class="element">
-      <h3>Type 1</h3>
+      <div class="chip">Type1</div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -1046,7 +1089,7 @@
     </div>
     <div class="blankHXS"></div>
     <div class="element">
-      <h3>Type 2</h3>
+      <div class="chip">Type2</div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
@@ -1081,7 +1124,7 @@
     <div class="blankHS"></div>
 
     <div class="element">
-      <h3>Type 3</h3>
+      <div class="chip">Type3</div>
     </div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
