--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -25,8 +25,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
   <link
@@ -34,8 +33,7 @@
     rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -47,21 +45,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
   <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
@@ -94,8 +88,7 @@
   <meta property="og:description" content="Hi! Thanks for stopping by. 
     I enjoy design and code who loves solving challenging problems. 
     Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -132,14 +125,12 @@
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about"
-              class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -153,7 +144,7 @@
   </nav>
   <!-- header -->
 
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
 
 
   <!-- cover -->
@@ -165,7 +156,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <h4>TWO VOLUMES IN ONE SPACE</h4>
+          <h1>TWO VOLUMES IN ONE SPACE</h1>
           <p class="lineHorizAll"></p>
           <h6>the purpose of these two volumes is to distinguish two types of
             programs: for the public, another for private use.</h6>
@@ -197,9 +188,9 @@
       </div>
       <div class="Grid-cell">
         <h4>PRIVATE VS. PUBLIC</h4>
-          <h6>insert two volumes into one space two distinguish two main
-            programs. one for the public, another one for private purpose</p>
-          </h6>
+        <h6>insert two volumes into one space two distinguish two main
+          programs. one for the public, another one for private purpose</p>
+        </h6>
       </div>
     </div>
     <div class="blankHM"></div>
@@ -292,12 +283,15 @@
   <!--Section Perspective -->
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
-      <img src="section_perspective.jpg" alt="DIAGRAM">
+      <div class="element">
+
+        <img src="section_perspective.jpg" alt="DIAGRAM">
+      </div>
     </div>
     <div class="Grid-cell">
       <h4>SECTION PERSPECTIVE</h4>
-      <h6>F1-5 with Facade Detail
-      </h6>
+
+      <h6>F1-5 with Facade Detail </h6>
     </div>
   </div>
   <!--Section Perspective -->
@@ -318,9 +312,13 @@
   <!-- renders -->
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
-      <img src="render_int1.jpg" alt="render">
+      <div class="element">
+        <img src="render_int1.jpg" alt="render">
+      </div>
     </div>
+
     <div class="Grid-cell">
+
       <h4>INTERIOR VIEW</h4>
       <h6>F1-5 with Facade Detail </h6>
     </div>
@@ -332,7 +330,9 @@
   <!-- renders -->
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
-      <img src="render_int2.jpg" alt="render">
+      <div class="element">
+        <img src="render_int2.jpg" alt="render">
+      </div>
     </div>
     <div class="Grid-cell">
       <h4>INTERIOR VIEW</h4>
@@ -346,7 +346,9 @@
   <!-- renders -->
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
-      <img src="render_streetview.jpg" alt="render">
+      <div class="element">
+        <img src="render_streetview.jpg" alt="render">
+      </div>
     </div>
     <div class="Grid-cell">
       <h4>STREET VIEW</h4>
@@ -429,6 +431,9 @@
     </div>
   </div>
   <!-- sections -->
+  <div class="blankHS"></div>
+  <hr>
+  <div class="blankHS"></div>
   <!--Arrow-->
   <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
     <div class="Grid-cell">
@@ -442,7 +447,10 @@
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter wrapper">
     <div class="Grid-cell">
-      <img src="site.jpg" alt="Floor Plans">
+      <div class="element">
+
+        <img src="site.jpg" alt="Floor Plans">
+      </div>
     </div>
     <div class="Grid-cell">
       <h4>Site</h4>
@@ -476,32 +484,32 @@
 <!--back to top-->
 
 <!--footer-->
-  <!--footer-->
-  <div class="colorBgGrey">
+<!--footer-->
+<div class="colorBgGrey">
 
-    <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-        </a>
+  <div class="footer">
+    <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
+    </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+      </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-          <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-        </a>
+      <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+      </a>
 
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../../icon/git.svg" alt="github">
-        </a>
+      <a target="_blank" href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../../icon/git.svg" alt="github">
+      </a>
 
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-        </a>
-      </div>
+      <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+      </a>
     </div>
   </div>
-  <!--footer-->
+</div>
+<!--footer-->
 </div>
 
 </html>
